# Docforge_Hub

./: .gitignore  README.md  pyproject.toml
backend/: constants.py  database.py  llm.py  main.py  models.py  queries.py  redis_client.py
backend/routes/: chat.py  company.py  departments.py  documents.py  downloads.py  enhance.py  notion.py  questions.py  scoring.py  sections.py  suggestions.py  templates.py  versioning.py
backend/utils/: text_cleaner.py  version_helper.py
citerag/: README.md
citerag/backend/: constants.py  database.py  llm.py  main.py  redis_client.py
citerag/backend/models/: answer_models.py  eval_models.py  ingest_models.py  retrieval_models.py
citerag/backend/prompts/: answer_prompt.py  compare_prompt.py  refine_prompt.py
citerag/backend/rag/: chunker.py  retriever.py
citerag/backend/routes/: answer.py  evaluate.py  ingest.py  retrieval.py  tools.py
citerag/backend/utils/: text_utils.py
citerag/database/: schema.sql
citerag/frontend/: app.py  config.py
citerag/frontend/pages/: chat.py  evaluation.py  inspector.py
database/schema/: company_context.sql  document_sections.sql  document_types.sql  documents.sql  question_answers.sql  template_questions.sql
frontend/: app.py  config.py
frontend/pages/: generator.py  library.py  notion.py
frontend/utils/: api.py
shared/: database.py  notion_client.py
statecase/: README.md
statecase/backend/: constants.py  database.py  llm.py  main.py  redis_client.py
statecase/backend/graph/: edges.py  memory.py  (+1 more)
statecase/database/: schema.sql
statecase/frontend/: app.py  config.py
(+11 files in other folders)
